--- a/main.html
+++ b/main.html
@@ -8,8 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <script type="text/javascript" src="./script.js"></script>
+		<div>
+    <h1>This is a Heading</h1>
+			</div>
+
 
 </body>
 
