--- a/main.html
+++ b/main.html
@@ -8,11 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="main">
+		<h1 id="heading">This is a Heading</h1>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
- <h2>
-	 This is a Heading
- </h2>
+
 </body>
 
 </html>
